Basic book add interface
